--- a/ticTacToe/ticTacToe.vcxproj
+++ b/ticTacToe/ticTacToe.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="ticTacToe.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="myHeader.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
